@@ -4,6 +4,8 @@ version ? (????-??-??)
 
   - Don't send mail to deleted users (alec)
   - BTS#0000847: Fixed UI language setting when HTTP_ACCEPT_LANGUAGE is not set (alec)
+  - Added option finances/cashimport_use_idate to use file import date
+    instead of cash operation date (alec)
 
 version 1.11.11 Bray (2011-01-17)
 
